--- a/styles/ne-global/_section-metadata.scss
+++ b/styles/ne-global/_section-metadata.scss
@@ -50,7 +50,6 @@
   }
 }
 
-
 .section {
   &:has(.section-background) {
     position: relative;
@@ -162,7 +161,7 @@
   left: -100vw;
   width: 200vw;
   height: 100%;
-  z-index: -1;
+  z-index: -100;
 
   background-size: cover;
   background-position: center;
